2008-08-07  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: Refresh should also repopulate the PropertyGrid.
	[Fixes part of bug #415452]

2008-08-07  Andreia Gaita <avidigal@novell.com> 

	* WebBrowser.cs: Remove extraneous CWL. Fixes #411372 (partially)

2008-08-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: Selection changes made in the MouseDown handler should
	use the *Core versions of selection in SelectedIndices collection,
	since the SelectedIndexChanged/SelectedValueChanged events are fired
	until we get a MouseUp event, and thus we need to separate the logic
	from the events, as done in the keyboard navigation. Also, fire those
	selection events from keyboard navigation in SelectionMode.None, even
	if we don't have a selection, as .Net does.

2008-08-05  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: ITypeDescriptorContext should be relative to the parent 
	GridEntry, not the current.
	[Fixes bug #413896]

2008-08-04  Ivan N. Zlatev  <contact@i-nz.net>

	* TextBoxBase.cs: De-internalize max_length field.
	* RichTextBox.cs: Use base.MaxLength - both TextBoxBase and RichTextBox 
	share the same logic.
	[Fixes bug #414454]

2008-08-01  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* DateTimePicker.cs: 
	* ThemeWin32Classic.cs: Add a editing capability to DateTimePicker, in
	order to set the value as required (which means: when selection
	changes for a part being edited, and not before that if not needed).
	Also use an enum to describe which part are we using, and use the
	selection as a property in PartData, in order to notify the
	DateTimePicker owner that we need to end the current edit.
	Fixes #383462.

2008-08-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ThemeWin32Classic.cs: Don't draw ListViewSubItem instances from
	DrawListViewItem - we need to reuse the main item's drawing for the
	first sub item in case owner draw is true, but wants the system to